--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "description": "practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --config .prettierrc 'src/**/*.js' --write"
   },
   "author": "Edith",
   "license": "ISC",
