--- a/src/package.json
+++ b/src/package.json
@@ -4,11 +4,13 @@
   "description": "practice",
   "main": "index.js",
   "scripts": {
-    "prettier": "prettier --config .prettierrc 'src/*.js' --write"
+    "prettier": "prettier --config .prettierrc 'src/**/*.js' --write",
+    "lint": "eslint . --ext .js"
   },
   "author": "Edith",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.29.0",
     "prettier": "^2.8.0"
   }
 }
