--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["eslint:recommended"],
   "plugins": [],
   "parserOptions": {
     "ecmaVersion": 2022,
